--- a/src/componet/sidebar/otherpage/otherpage.css
+++ b/src/componet/sidebar/otherpage/otherpage.css
@@ -878,3 +878,15 @@ html {
 .gpayimage {
   width: 100px;
 }
+.bounsBox {
+  box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px,
+    rgb(0 0 0 / 30%) 0px 30px 60px -30px,
+    rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
+  border-radius: 10px;
+  width: 242px;
+  height: 63px;
+}
+.bounsBox ul {
+  padding-left: 0;
+  justify-content: center;
+}
