--- a/src/componet/sidebar/otherpage/tradeAndWin.css
+++ b/src/componet/sidebar/otherpage/tradeAndWin.css
@@ -304,3 +304,96 @@
   max-width: 178px;
   margin-top: 29px;
 }
+
+/* Cart */
+.cart-warn {
+  width: 100%;
+  height: 40px;
+  background: #fff8ee;
+  border: 1px solid #ffe6c1;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 0px 12px;
+}
+.cart-warn p {
+  margin: 0;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #787878;
+}
+.cart-heading {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #000000;
+  margin: 18px 0 25px 0;
+}
+.cart-body {
+  display: flex;
+  gap: 35px;
+}
+.summry-block {
+  width: 295px;
+  height: 120px;
+  background: #ffffff;
+  border: 1px solid #dfdfdf;
+  box-shadow: 0px 0px 10px rgba(93, 32, 103, 0.1);
+  border-radius: 10px;
+  /* padding: 0 20px; */
+}
+.summry-head {
+  background: #5d2067;
+  border-radius: 10px 10px 0px 0px;
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 35px;
+  color: #ffffff;
+  margin: 0 0 15px 0;
+  text-align: center;
+}
+.summry-detail {
+  padding: 0 20px;
+  margin: 0;
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #787878;
+}
+.summry-line {
+  border: 0.5px solid #787878;
+  margin: 5px auto 8px;
+  width: 85%;
+}
+.cart-btn {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  margin-top: 34px;
+}
+.cart-btn button {
+  width: 150px;
+  height: 40px;
+  background: #5d2067;
+  border-radius: 30px;
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  border: none;
+  outline: none;
+}
+.cart-btn button:focus {
+  outline: none;
+}
+.cart-btn button:first-child {
+  background: rgba(93, 32, 103, 0.1);
+  color: #5d2067;
+}
