--- a/src/componet/commonComponet/sidebar1.css
+++ b/src/componet/commonComponet/sidebar1.css
@@ -349,3 +349,37 @@ a:not(.MuiButtonBase-root):hover .hoverSidebar {
 a:not(.MuiButtonBase-root):hover .hoverSidebar1 {
   filter: none;
 }
+
+@media screen and (max-width: 1099.98px) {
+  .webViewHeader {
+    display: none !important;
+  }
+  /* .mobileHeader {
+    display: flex;
+    justify-content: end;
+  } */
+}
+@media screen and (max-width: 768px) {
+  .dashboard-imageSize {
+    padding-top: 48px !important;
+  }
+}
+.useLogoSize {
+  width: 25px;
+}
+.avtar-main {
+  display: flex;
+  gap: 5px;
+}
+.avatar-logo {
+  font-size: 14px;
+  margin-top: 5px;
+}
+.verifyText {
+  background: #f8fbf8;
+  border-radius: 1px;
+  padding: 3px;
+  font-size: 12px;
+  color: #00b432;
+  padding-top: 0px;
+}
