--- a/src/componet/sidebar/otherpage/otherpage.css
+++ b/src/componet/sidebar/otherpage/otherpage.css
@@ -890,3 +890,130 @@ html {
   padding-left: 0;
   justify-content: center;
 }
+ol.instUpi {
+  list-style-type: square;
+  margin-top: 12px;
+  border: 1px solid #837777;
+  border-radius: 10px;
+  height: 100%;
+  /* ALIGN-ITEMS: center; */
+  padding-left: 28px;
+  padding-top: 11px;
+}
+.instUpi li {
+  margin-bottom: 4px;
+  text-align: justify;
+  padding-right: 9px;
+}
+.imageUplodeUpi {
+  z-index: 999;
+  opacity: 0;
+  /* width: 320px; */
+  height: 121px;
+  position: absolute;
+  right: 0px;
+  left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.Neon {
+  font-size: 14px;
+  color: #494949;
+  position: relative;
+}
+.Neon * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.Neon-input-dragDrop {
+  display: block;
+  /* width: 343px; */
+  /* margin: 0 auto 25px auto; */
+  padding: 25px;
+  color: #8d9499;
+  color: #97a1a8;
+  background: #fff;
+  border: 2px dashed #c8cbce;
+  text-align: center;
+  -webkit-transition: box-shadow 0.3s, border-color 0.3s;
+  -moz-transition: box-shadow 0.3s, border-color 0.3s;
+  transition: box-shadow 0.3s, border-color 0.3s;
+}
+.Neon-input-dragDrop .Neon-input-icon {
+  font-size: 48px;
+  margin-top: -10px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.Neon-input-text h3 {
+  margin: 0;
+  font-size: 18px;
+}
+.Neon-input-text span {
+  padding-top: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #696871;
+}
+.Neon-input-choose-btn.blue {
+  color: #5d2067;
+  border: 1px solid #5d2067;
+}
+.Neon:hover .Neon-input-choose-btn.blue {
+  color: white;
+  border: 1px solid #5d2067;
+  background-color: #5d2067;
+}
+.Neon-input-choose-btn {
+  display: inline-block;
+  padding: 8px 14px;
+  outline: none;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  white-space: nowrap;
+  font-size: 12px;
+  font-weight: bold;
+  color: #8d9496;
+  border-radius: 3px;
+  border: 1px solid #c6c6c6;
+  vertical-align: middle;
+  background-color: #fff;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.05);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+div.instUpi {
+  list-style-type: square;
+  margin-top: 12px;
+  border: 1px solid #837777;
+  border-radius: 10px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+div.instBank {
+  margin-top: 12px;
+  border: 1px solid #837777;
+  border-radius: 10px;
+  height: 100%;
+  padding: 16px;
+}
+.f-600 {
+  font-weight: 600;
+}
+div.instcypto {
+  list-style-type: square;
+  margin-top: 12px;
+  border: 1px solid #837777;
+  border-radius: 10px;
+  height: 100%;
+  display: flex;
+  display: block;
+  text-align: center;
+}
