--- a/src/componet/sidebar/otherpage/tradeAndWin.css
+++ b/src/componet/sidebar/otherpage/tradeAndWin.css
@@ -1,5 +1,5 @@
 .trade-main-body {
-  width: 1066px;
+  /* width: 1066px; */
   min-height: 535px;
   background: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
