--- a/src/componet/sidebar/otherpage/tradeAndWin.css
+++ b/src/componet/sidebar/otherpage/tradeAndWin.css
@@ -27,6 +27,7 @@
   display: flex;
   gap: 60px;
 }
+
 .trade-tab-button {
   display: flex;
   flex-direction: column;
@@ -133,9 +134,10 @@
   display: flex;
   flex-direction: column;
   gap: 18px;
+  width: 100%;
 }
 .trade-order-body {
-  width: 650px;
+  width: 100%;
   height: 87px;
   background: #ffffff;
   border: 1px solid #dfdfdf;
@@ -308,7 +310,7 @@
 /* Cart */
 .cart-warn {
   width: 100%;
-  height: 40px;
+  height: 100%;
   background: #fff8ee;
   border: 1px solid #ffe6c1;
   border-radius: 10px;
@@ -396,4 +398,38 @@
 .cart-btn button:first-child {
   background: rgba(93, 32, 103, 0.1);
   color: #5d2067;
+}
+.error {
+  font-size: 12px;
+  color: #ff0000;
+  margin-top: 2px;
+}
+
+@media (max-width: 799px) {
+  .trade-body {
+    flex-direction: column;
+    align-items: center;
+  }
+  .trade-product-block {
+    justify-content: center !important;
+  }
+  .trade-main-body {
+    padding: 28px 18px 30px;
+  }
+  .trade-order-body {
+    padding: 10px 8px 10px 10px;
+  }
+  .trade-order-date {
+    width: 24%;
+  }
+  .trade-order-name {
+    width: 25%;
+  }
+  .prize-cards-block {
+    flex-direction: column;
+  }
+  .cart-body {
+    flex-direction: column;
+    align-items: center;
+  }
 }
