--- a/src/componet/sidebar/Bonus/Bonus_dashbord.css
+++ b/src/componet/sidebar/Bonus/Bonus_dashbord.css
@@ -40,7 +40,34 @@
   justify-content: space-around;
   width: 60%;
 }
+.w-18 {
+  width: 13%;
 
+}
+
+.w-17 {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-width: 25%;
+
+}
+
+.w-24 {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 24%;
+
+}
+
+.w-27 {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-width: 35%;
+
+}
 @media only screen and (max-width: 1230px) {
   .head_up {
     width: 64%;
@@ -50,6 +77,9 @@
   #btn_11 {
     font-size: 0.9rem;
   }
+                .flex_items {
+                  font-size: .9rem;
+                }
 }
 
 @media only screen and (max-width: 1000px) {
