--- a/src/componet/sidebar/Bonus/Bonus_dashbord.css
+++ b/src/componet/sidebar/Bonus/Bonus_dashbord.css
@@ -42,7 +42,6 @@
 }
 .w-18 {
   width: 13%;
-
 }
 
 .w-17 {
@@ -50,7 +49,6 @@
   display: flex;
   justify-content: center;
   min-width: 25%;
-
 }
 
 .w-24 {
@@ -58,7 +56,6 @@
   display: flex;
   justify-content: center;
   width: 24%;
-
 }
 
 .w-27 {
@@ -66,7 +63,6 @@
   display: flex;
   justify-content: center;
   min-width: 35%;
-
 }
 @media only screen and (max-width: 1230px) {
   .head_up {
@@ -77,9 +73,9 @@
   #btn_11 {
     font-size: 0.9rem;
   }
-                .flex_items {
-                  font-size: .9rem;
-                }
+  .flex_items {
+    font-size: 0.9rem;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -195,4 +191,10 @@
     min-height: 35px;
     margin-left: 0px !important;
   }
+}
+.bonusLoder {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
