--- a/src/componet/sidebar/deposit/Deposite_in_Progress.css
+++ b/src/componet/sidebar/deposit/Deposite_in_Progress.css
@@ -1,27 +1,47 @@
-.val1{
-    margin-left: 16px;
-    font-weight: 500; 
-    
+.val1 {
+  margin-left: 16px;
+  font-weight: 500;
 }
-.val2{
-    margin-left: 100px;
-    font-weight: 500; 
+.val2 {
+  margin-left: 100px;
+  font-weight: 500;
 }
-.pading{
-    padding:20px 0px;
+.pading {
+  padding: 20px 0px;
 }
-.val3{
-    margin-left: 60px;
-    font-weight: 600; 
+.val3 {
+  margin-left: 60px;
+  font-weight: 600;
 }
-.val4{
-    margin-left: 45px;
-    font-weight: 600; 
+.val4 {
+  margin-left: 45px;
+  font-weight: 600;
 }
-.bold{
-    font-weight: 600;
+.bold {
+  font-weight: 600;
 }
-.margin{
-    margin-left: 75%;
+.margin {
+  margin-left: 75%;
 }
 
+.val1 a {
+  color: #3b3e66;
+}
+.telImage {
+  width: 130px;
+  height: 130px;
+}
+.telReqhed {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 16px;
+  margin-top: 16px;
+}
+.telReqHedCopy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 600;
+}
