--- a/public/rightfx_login_files/custom.css
+++ b/public/rightfx_login_files/custom.css
@@ -16997,7 +16997,7 @@ body {
   /* padding: 1rem 3rem; */
   padding: 40px 100px 40px 27px;
   display: flex;
-  flex: 1 1;
+  /* flex: 1 1; */
 }
 @media (max-width: 767.98px) {
   .app-content--inner {
@@ -17921,15 +17921,14 @@ input.MuiInputBase-input {
     padding: 5px 6px !important;
   }
 }
-.MuiFormHelperText-root {
-  /* font-family: cairo, sans-serif !important;
-  font-weight: 600 !important; */
+/* .MuiFormHelperText-root {
+
   color: #fff !important;
   background-color: rgba(220, 53, 69, 0.9) !important;
   border-radius: 0.25rem;
   padding: 5px 5px;
   margin: 3px 0px !important;
-}
+} */
 
 @media screen and (max-width: 1100px) {
   .test {
