--- a/src/componet/sidebar/otherpage/tradeAndWin.css
+++ b/src/componet/sidebar/otherpage/tradeAndWin.css
@@ -80,8 +80,8 @@
   margin: auto;
 }
 .product-img-block img {
-  width: 104px;
-  height: 87px;
+  width: auto;
+  height: 100%;
 }
 .product-name {
   font-family: "Poppins";
@@ -139,6 +139,7 @@
 .trade-order-body {
   width: 100%;
   height: 87px;
+  margin-bottom: 5px;
   background: #ffffff;
   border: 1px solid #dfdfdf;
   box-shadow: 0px 0px 10px rgba(93, 32, 103, 0.1);
@@ -383,7 +384,7 @@
   width: 150px;
   height: 40px;
   background: #5d2067;
-  border-radius: 30px;
+  border-radius: 30px !important;
   font-family: "Poppins";
   font-weight: 500;
   font-size: 16px;
@@ -400,8 +401,8 @@
   color: #5d2067;
 }
 .error {
-  font-size: 12px;
-  color: #ff0000;
+  font-size: 0.75rem;
+  color: #d32f2f;
   margin-top: 2px;
 }
 
