--- a/src/componet/sidebar/profile/profile.css
+++ b/src/componet/sidebar/profile/profile.css
@@ -1,38 +1,31 @@
-.profileText{
- 
-        color: rgba(0, 0, 0, 0.54);
-        margin: 0;
-        font-size: 0.75rem;
-        margin-top: 3px;
-        text-align: left;
-        font-family: Cairo,sans-serif;
-        font-weight: 400;
-        line-height: 1.66;
-
+.profileText {
+  color: rgba(0, 0, 0, 0.54);
+  margin: 0;
+  font-size: 0.75rem;
+  margin-top: 3px;
+  text-align: left;
+  font-family: Cairo, sans-serif;
+  font-weight: 400;
+  line-height: 1.66;
 }
-.btnModalProfileCN
-{
-    padding: 15px 22px !important;
+.btnModalProfileCN {
+  padding: 15px 22px !important;
 }
 
-
-.customscroll::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
+.customscroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
 }
 
-.customscroll::-webkit-scrollbar
-{
+.customscroll::-webkit-scrollbar {
   width: 5px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
-.customscroll::-webkit-scrollbar-thumb
-{
-  background-color: #2A3F73;
+.customscroll::-webkit-scrollbar-thumb {
+  background-color: #2a3f73;
 }
-.uploaderDropZone>label {
+.uploaderDropZone > label {
   margin: 0;
   width: 100%;
   height: 151px;
@@ -48,7 +41,7 @@
   width: 150px;
   height: 150px;
 }
-.uploaderDropZone>.received-file {
+.uploaderDropZone > .received-file {
   width: 100%;
   height: 100%;
   background: #fff;
@@ -57,23 +50,23 @@
   border-radius: 5px;
   position: relative;
 }
-.uploaderDropZone>.received-file>button {
+.uploaderDropZone > .received-file > button {
   position: absolute;
   top: -10px;
   right: -10px;
   cursor: pointer;
 }
-.fontimgclose{
-  background-color: #B71C1C;
+.fontimgclose {
+  background-color: #b71c1c;
   border-radius: 50%;
   color: #fff;
   font-size: 10px;
-      font-size: 17px !important;
+  font-size: 17px !important;
 }
-.uploadmr{
+.uploadmr {
   margin-top: 119px;
 }
-.deposit-upload-image-preview1{
+.deposit-upload-image-preview1 {
   width: 151px;
   height: 151px;
 }
@@ -83,8 +76,8 @@
   font-size: 19px;
 }
 
-.padingtop5{
-  padding-top: 3rem!important;
+.padingtop5 {
+  padding-top: 3rem !important;
 }
 .uploaded-proof-view-section {
   margin: 20px 0px;
@@ -95,51 +88,51 @@
   display: flex;
   flex-direction: column;
 }
-.docimage{
+.docimage {
   max-width: 250px;
   max-height: 250px;
 }
-.deletebankLoder{ 
+.deletebankLoder {
   padding: 23px 66px !important;
 }
-.filable{
+.filable {
   font-weight: 600;
 }
-.centerflexjus{
+.centerflexjus {
   display: flex;
   justify-content: center;
 }
-.margin-9{
+.margin-9 {
   margin: 9px;
 }
-.approvedocument{
+.approvedocument {
   font-size: 15px;
   color: white;
   padding: 1px 6px;
   border-radius: 5px;
 }
 
-.approvedocument.approve{
+.approvedocument.approve {
   background: green;
 }
-.approvedocument.rejected{
+.approvedocument.rejected {
   background: red;
 }
 
-.approvedocument.padding{
+.approvedocument.padding {
   background: #c1c103;
 }
-@media screen and (min-width: 899px){
-  .resveributton{
-      margin-top: 30px !important;
+@media screen and (min-width: 899px) {
+  .resveributton {
+    margin-top: 30px !important;
   }
 }
-@media screen and (min-width:899px ) and (max-width : 947px) {
+@media screen and (min-width: 899px) and (max-width: 947px) {
   .resveributton {
     padding: 10px 10px !important;
   }
 }
-.docH1Text{
+.docH1Text {
   display: flex;
   flex-wrap: wrap;
   background-color: #f3f3f3;
@@ -159,29 +152,34 @@
   opacity: 1;
   border-radius: 0.75rem;
 }
-.picdocMain{
+.picdocMain {
   display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 12px;
-    margin-top: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 12px;
+  margin-top: 10px;
 }
-.firstimageofdoc1{
+.firstimageofdoc1 {
   /* border: 3px solid black;
   border-radius: 28px; */
   width: 372px;
-
 }
-.firstimageofdoc2{
+.firstimageofdoc2 {
   /* border: 9px solid black;
   border-radius: 28px; */
   width: 372px;
-  
 }
-@media screen and (max-width: 473px){
-  .firstimageofdoc2{
-    width: calc(100vw - 100px);  }
-    .firstimageofdoc1{
-      width: calc(100vw - 100px);  }
+@media screen and (max-width: 473px) {
+  .firstimageofdoc2 {
+    width: calc(100vw - 100px);
+  }
+  .firstimageofdoc1 {
+    width: calc(100vw - 100px);
+  }
 }
-
+.doc-Requied {
+  width: 100%;
+  display: block;
+  text-align: center;
+  color: red;
+}
