--- a/src/componet/sidebar/spinAndWin/Spin_dash.css
+++ b/src/componet/sidebar/spinAndWin/Spin_dash.css
@@ -105,7 +105,7 @@
   /* position: absolute;
   top: 36%;
   right: 28%; */
-  padding: 5em;
+  /* padding: 5em; */
   color: #dfdfdf;
   text-transform: capitalize;
 }
