--- a/public/rightfx_login_files/custom.css
+++ b/public/rightfx_login_files/custom.css
@@ -16395,6 +16395,7 @@ body .MuiInputLabel-outlined {
 }
 .app-sidebar--light .sidebar-navigation ul li > a {
   color: rgba(7, 9, 25, 0.8);
+  cursor: pointer;
 }
 .app-sidebar--light .sidebar-navigation ul li > a .sidebar-icon > {
   color: var(--primary);
